--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         <div class="container">
             <h1>Til pappa</h1>
 
-            <img src="farsdag/fardatter.jpg" alt="Far og datter" id="fardatter">
+            <img src="fardatter.jpg" alt="Far og datter" id="fardatter">
             <h2>Gratulerer så masse med farsdagen!</h2>
             <button id="hjertebilde">Trykk her</button>
-            <img src="farsdag/hjerte.jpg" alt="Hjerte" id="hjerte">
+            <img src="hjerte.jpg" alt="Hjerte" id="hjerte">
             <p>Mens æ satt og studert poppa det opp en tanke i hodet mitt om at æ villa lag farsdagskort gjennom programmering. Og æ ble så glad, fordi æ fikk en god følelse av at æ har valgt riktig vei! Æ e glad for at æ går i dine fotspor og at æ kan spør dæ om hjelp hvis æ treng det. Det e koselig at vi har en egen greie som dæm tre andre ikke forstår:p</p>
             <p>Du e så utrolig snill og god pappa, som æ hvert år må presiser at æ e heldig som har. Du e utrolig handy og har svar på et hvilket som helst spørsmål. </p>
             <p>Her e en liste over ting æ sett pris på med dæ:</p>
